login page alignment fixed

--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -3,8 +3,8 @@
   opacity: 0;
   display: none;
   &__card{
-    width: 25%;
-    margin: auto;
+    // width: 25%;
+    // margin: auto;
     padding: 10px;
     margin-top: 50px;
   }
